h1. CHANGELOG

h3. 1.18.0 January 10, 2014 (book version 1.18)

* Update from Ruby 2.0.0 to Ruby 2.0.1

Changes in the book:

* Changed one line in the "Front-End Framework" chapter to accommodate a change in the rails_layout gem version 1.0.1. The command @rails generate layout foundation4 --force@ becomes @rails generate layout:install foundation4 --force@.

h3. 1.17.2 December 8, 2013 (book version 1.17)

* update to Rails 4.0.2
* use Foundation 4 pending resolution of issue #10

h3. 1.17.1 December 5, 2013 (book version 1.17)

* fix tracking in segmentio.js (issue #2)