@@ -3,6 +3,8 @@ h1. CHANGELOG
 h3. 1.18.0 January 10, 2014 (book version 1.18)
 
 * Update from Ruby 2.0.0 to Ruby 2.0.1
+* added ActionMailer configuration values to file 'config/environments/development.rb'
+* added ActionMailer configuration values to file 'config/environments/production.rb'
 
 Changes in the book:
 
